hero bg-image and icons are added
section hero, features, clients, footer

--- a/index.html
+++ b/index.html
@@ -52,28 +52,28 @@
             Эффективные решения для бизнеса
           </h2>
           <ul class="list features-list">
-            <li class="item">
+            <li class="features-item icon-antenna">
               <h3 class="title">Внимание к деталям</h3>
               <p class="features-text">
                 Идейные соображения, а также начало повседневной работы по
                 формированию позиции.
               </p>
             </li>
-            <li class="item">
+            <li class="features-item icon-clock">
               <h3 class="title">Пунктуальность</h3>
               <p class="features-text">
                 Задача организации, в особенности же рамки и место обучения
                 кадров влечет за собой.
               </p>
             </li>
-            <li class="item">
+            <li class="features-item icon-diagram">
               <h3 class="title">Планирование</h3>
               <p class="features-text">
                 Равным образом консультация с широким активом в значительной
                 степени обуславливает.
               </p>
             </li>
-            <li class="item">
+            <li class="features-item icon-astronaut">
               <h3 class="title">Современные технологии</h3>
               <p class="features-text">
                 Значимость этих проблем настолько очевидна, что реализация
@@ -158,19 +158,84 @@
           </ul>
         </div>
       </section>
+      <section class="clients">
+        <div class="container">
+          <h2 class="section-title">Постоянные клиенты</h2>
+          <ul class="list clients-list">
+            <li class="clients-item">
+              <img
+                src="./images/icons.svg/Logo-1.svg"
+                alt="Логотип компании YA&CO"
+                class="client-logo"
+                width="106"
+              />
+            </li>
+            <li class="clients-item">
+              <img
+                src="./images/icons.svg/Logo-2.svg"
+                alt="Логотип компании"
+                class="client-logo"
+                width="106"
+              />
+            </li>
+            <li class="clients-item">
+              <img
+                src="./images/icons.svg/Logo-3.svg"
+                alt="Логотип компании"
+                class="client-logo"
+                width="106"
+              />
+            </li>
+            <li class="clients-item">
+              <img
+                src="./images/icons.svg/Logo-4.svg"
+                alt="Логотип компании"
+                class="client-logo"
+                width="106"
+              />
+            </li>
+            <li class="clients-item">
+              <img
+                src="./images/icons.svg/Logo-5.svg"
+                alt="Логотип компании"
+                class="client-logo"
+                width="106"
+              />
+            </li>
+            <li class="clients-item">
+              <img
+                src="./images/icons.svg/Logo-6.svg"
+                alt="Логотип компании"
+                class="client-logo"
+                width="106"
+              />
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
     <footer class="section-footer">
-      <div class="container">
-        <a href="index.html" class="footer logo"><span>Web</span>Studio</a>
-        <address class="contacts">
-          <p class="footer-address">г. Киев, пр-т Леси Украинки, 26</p>
-          <a href="mailto:info@example.com" class="footer-contact"
-            >info@example.com</a
-          ><br />
-          <a href="tel:+380961111111" class="footer-contact"
-            >+38 096 111 11 11</a
-          >
-        </address>
+      <div class="container footer-container">
+        <div class="address-block">
+          <a href="index.html" class="footer logo"><span>Web</span>Studio</a>
+          <address class="contacts">
+            <p class="footer-address">г. Киев, пр-т Леси Украинки, 26</p>
+            <a href="mailto:info@example.com" class="footer-contact"
+              >info@example.com</a
+            ><br />
+            <a href="tel:+380961111111" class="footer-contact"
+              >+38 096 111 11 11</a
+            >
+          </address>
+        </div>
+        <div>
+          <span class="socials-text">присоединяйтесь</span>
+            <a href="" class="socials-item instagram"></a>
+            <a href="" class="socials-item twitter"></a>
+            <a href="" class="socials-item facebook"></a>
+            <a href="" class="socials-item linkedin"></a>
+          </div>
+        </div>
       </div>
     </footer>
   </body>
