icons inserted as pseudo-elements

--- a/portfolio.html
+++ b/portfolio.html
@@ -161,17 +161,27 @@
       </section>
     </main>
     <footer class="section-footer">
-      <div class="container">
-        <a href="index.html" class="footer logo"><span>Web</span>Studio</a>
-        <address class="contacts">
-          <p class="footer-address">г. Киев, пр-т Леси Украинки, 26</p>
-          <a href="mailto:info@example.com" class="footer-contact"
-            >info@example.com</a
-          ><br />
-          <a href="tel:+380961111111" class="footer-contact"
-            >+38 096 111 11 11</a
-          >
-        </address>
+      <div class="container footer-container">
+        <div class="address-block">
+          <a href="index.html" class="footer logo"><span>Web</span>Studio</a>
+          <address class="contacts">
+            <p class="footer-address">г. Киев, пр-т Леси Украинки, 26</p>
+            <a href="mailto:info@example.com" class="footer-contact"
+              >info@example.com</a
+            ><br />
+            <a href="tel:+380961111111" class="footer-contact"
+              >+38 096 111 11 11</a
+            >
+          </address>
+        </div>
+        <div>
+          <span class="socials-text">присоединяйтесь</span>
+            <a href="" class="socials-icon instagram"></a>
+            <a href="" class="socials-icon twitter"></a>
+            <a href="" class="socials-icon facebook"></a>
+            <a href="" class="socials-icon linkedin"></a>
+          </div>
+        </div>
       </div>
     </footer>
   </body>
