--- a/index.html
+++ b/index.html
@@ -230,10 +230,10 @@
         </div>
         <div>
           <span class="socials-text">присоединяйтесь</span>
-            <a href="" class="socials-item instagram"></a>
-            <a href="" class="socials-item twitter"></a>
-            <a href="" class="socials-item facebook"></a>
-            <a href="" class="socials-item linkedin"></a>
+            <a href="" class="socials-icon instagram"></a>
+            <a href="" class="socials-icon twitter"></a>
+            <a href="" class="socials-icon facebook"></a>
+            <a href="" class="socials-icon linkedin"></a>
           </div>
         </div>
       </div>
