--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
         <div class="address-block">
           <a href="index.html" class="footer logo"><span>Web</span>Studio</a>
           <address class="contacts">
-            <p class="footer-address">г. Киев, пр-т Леси Украинки, 26</p>
+            <a href="https://goo.gl/maps/mb2MzYeSatuCZ7m78" class="footer-contact"> г. Киев, пр-т Леси Украинки, 26</a>
             <a href="mailto:info@example.com" class="footer-contact"
               >info@example.com</a
             ><br />
