--- a/portfolio.html
+++ b/portfolio.html
@@ -70,92 +70,114 @@
           </ul>
           <ul class="project list">
             <li class="flex-element">
-              <img
-                src="./images/web-site-laptop.jpg"
-                alt="Ноутбук, где открыт наш сайт"
-                width="370"
-              />
-              <div class="flex-element-text">
-                <h2 class="project-title">Технокряк</h2>
-                <span>Веб-сайт</span>
-              </div>
+              <a href="" class="link"
+                ><img
+                  src="./images/web-site-laptop.jpg"
+                  alt="Ноутбук, где открыт наш сайт"
+                  width="370"
+                />
+                <div class="flex-element-text">
+                  <h2 class="project-title">Технокряк</h2>
+                  <span>Веб-сайт</span>
+                </div></a
+              >
             </li>
             <li class="flex-element">
-              <img
-                src="./images/design.jpg"
-                alt="Два баскетболиста"
-                width="370"
-              />
-              <div class="flex-element-text">
-                <h2 class="project-title">Постер New Orlean vs Golden Star</h2>
-                <span>Дизайн</span>
-              </div>
+              <a href="" class="link"
+                ><img
+                  src="./images/design.jpg"
+                  alt="Два баскетболиста"
+                  width="370"
+                />
+                <div class="flex-element-text">
+                  <h2 class="project-title">
+                    Постер New Orlean vs Golden Star
+                  </h2>
+                  <span>Дизайн</span>
+                </div></a
+              >
+            </li>
+
+            <li class="flex-element">
+              <a href="" class="link"
+                ><img
+                  src="./images/restaurant.jpg"
+                  alt="Логотип в виде рыбы"
+                  width="370"
+                />
+                <div class="flex-element-text">
+                  <h2 class="project-title">Ресторан Seafood</h2>
+                  <span>Приложение</span>
+                </div></a
+              >
             </li>
             <li class="flex-element">
-              <img
-                src="./images/restaurant.jpg"
-                alt="Логотип в виде рыбы"
-                width="370"
-              />
-              <div class="flex-element-text">
-                <h2 class="project-title">Ресторан Seafood</h2>
-                <span>Приложение</span>
-              </div>
+              <a href="" class="link"
+                ><img src="./images/marketing.jpg" alt="Наушники" width="370" />
+                <div class="flex-element-text">
+                  <h2 class="project-title">Проект Prime</h2>
+                  <span>Маркетинг</span>
+                </div></a
+              >
             </li>
             <li class="flex-element">
-              <img src="./images/marketing.jpg" alt="Наушники" width="370" />
-              <div class="flex-element-text">
-                <h2 class="project-title">Проект Prime</h2>
-                <span>Маркетинг</span>
-              </div>
+              <a href="" class="link"
+                ><img
+                  src="./images/app.jpg"
+                  alt="Белая и бежевая коробка"
+                  width="370"
+                />
+                <div class="flex-element-text">
+                  <h2 class="project-title">Проект Boxes</h2>
+                  <span>Приложение</span>
+                </div></a
+              >
             </li>
             <li class="flex-element">
-              <img
-                src="./images/app.jpg"
-                alt="Белая и бежевая коробка"
-                width="370"
-              />
-              <div class="flex-element-text">
-                <h2 class="project-title">Проект Boxes</h2>
-                <span>Приложение</span>
-              </div>
+              <a href="" class="link"
+                ><img
+                  src="./images/web-site-desktop.jpg"
+                  alt="Экран компьютера Mac"
+                  width="370"
+                />
+                <div class="flex-element-text">
+                  <h2 class="project-title">Inspiration has no Borders</h2>
+                  <span>Веб-сайт</span>
+                </div></a
+              >
             </li>
             <li class="flex-element">
-              <img
-                src="./images/web-site-desktop.jpg"
-                alt="Экран компьютера Mac"
-                width="370"
-              />
-              <div class="flex-element-text">
-                <h2 class="project-title">Inspiration has no Borders</h2>
-                <span>Веб-сайт</span>
-              </div>
+              <a href="" class="link"
+                ><img src="./images/design-2.jpg" alt="Журнал" width="370" />
+                <div class="flex-element-text">
+                  <h2 class="project-title">Издание Limited Edition</h2>
+                  <span>Дизайн</span>
+                </div></a
+              >
             </li>
             <li class="flex-element">
-              <img src="./images/design-2.jpg" alt="Журнал" width="370" />
-              <div class="flex-element-text">
-                <h2 class="project-title">Издание Limited Edition</h2>
-                <span>Дизайн</span>
-              </div>
+              <a href="" class="link"
+                ><img src="./images/marketing-2.jpg" alt="Бирка" width="370" />
+                <div class="flex-element-text">
+                  <h2 class="project-title">Проект LAB</h2>
+                  <span>Маркетинг</span>
+                </div></a
+              >
             </li>
             <li class="flex-element">
-              <img src="./images/marketing-2.jpg" alt="Бирка" width="370" />
-              <div class="flex-element-text">
-                <h2 class="project-title">Проект LAB</h2>
-                <span>Маркетинг</span>
-              </div>
+              <a href="" class="link"
+                ><img
+                  src="./images/app-2.jpg"
+                  alt="Человек работает на ноутбуке"
+                  width="370"
+                />
+                <div class="flex-element-text">
+                  <h2 class="project-title">Growing Business</h2>
+                  <span>Приложение</span>
+                </div></a
+              >
             </li>
-            <li class="flex-element">
-              <img
-                src="./images/app-2.jpg"
-                alt="Человек работает на ноутбуке"
-                width="370"
-              />
-              <div class="flex-element-text">
-                <h2 class="project-title">Growing Business</h2>
-                <span>Приложение</span>
-              </div>
-            </li>
+            <li class="flex-element"><a href="" class="link"></a></li>
           </ul>
         </div>
       </section>
@@ -176,11 +198,10 @@
         </div>
         <div>
           <span class="socials-text">присоединяйтесь</span>
-            <a href="" class="socials-icon instagram"></a>
-            <a href="" class="socials-icon twitter"></a>
-            <a href="" class="socials-icon facebook"></a>
-            <a href="" class="socials-icon linkedin"></a>
-          </div>
+          <a href="" class="socials-icon instagram"></a>
+          <a href="" class="socials-icon twitter"></a>
+          <a href="" class="socials-icon facebook"></a>
+          <a href="" class="socials-icon linkedin"></a>
         </div>
       </div>
     </footer>
