--- a/index.html
+++ b/index.html
@@ -31,12 +31,24 @@
         </nav>
         <ul class="info-nav list">
           <li class="item">
-            <a href="mailto:info@devstudio.com" class="link"
-              >info@devstudio.com</a
-            >
+            <a href="mailto:info@devstudio.com" class="link">
+              <svg class="icon-envelope" width="16px" height="12px">
+                <use
+                  href="./images/icons.svg/symbol-defs.svg#icon-envelope"
+                ></use>
+              </svg>
+              info@devstudio.com
+            </a>
           </li>
           <li class="item">
-            <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+            <a href="tel:+380961111111" class="link">
+              <svg class="icon-smartphone" width="10px" height="16px">
+                <use
+                  href="./images/icons.svg/symbol-defs.svg#icon-smartphone"
+                ></use>
+              </svg>
+              +38 096 111 11 11
+            </a>
           </li>
         </ul>
       </div>
@@ -52,28 +64,56 @@
             Эффективные решения для бизнеса
           </h2>
           <ul class="list features-list">
-            <li class="features-item icon-antenna">
+            <li class="features-item">
+              <div class="features-thumb">
+                <svg class="icon-antenna" width="70px" height="70px">
+                  <use
+                    href="./images/icons.svg/symbol-defs.svg#icon-antenna"
+                  ></use>
+                </svg>
+              </div>
               <h3 class="title">Внимание к деталям</h3>
               <p class="features-text">
                 Идейные соображения, а также начало повседневной работы по
                 формированию позиции.
               </p>
             </li>
-            <li class="features-item icon-clock">
+            <li class="features-item">
+              <div class="features-thumb">
+                <svg class="icon-clock" width="70px" height="70px">
+                  <use
+                    href="./images/icons.svg/symbol-defs.svg#icon-clock"
+                  ></use>
+                </svg>
+              </div>
               <h3 class="title">Пунктуальность</h3>
               <p class="features-text">
                 Задача организации, в особенности же рамки и место обучения
                 кадров влечет за собой.
               </p>
             </li>
-            <li class="features-item icon-diagram">
+            <li class="features-item">
+              <div class="features-thumb">
+                <svg class="icon-diagram" width="70px" height="70px">
+                  <use
+                    href="./images/icons.svg/symbol-defs.svg#icon-diagram"
+                  ></use>
+                </svg>
+              </div>
               <h3 class="title">Планирование</h3>
               <p class="features-text">
                 Равным образом консультация с широким активом в значительной
                 степени обуславливает.
               </p>
             </li>
-            <li class="features-item icon-astronaut">
+            <li class="features-item">
+              <div class="features-thumb">
+                <svg class="icon-astronaut" width="70px" height="70px">
+                  <use
+                    href="./images/icons.svg/symbol-defs.svg#icon-astronaut"
+                  ></use>
+                </svg>
+              </div>
               <h3 class="title">Современные технологии</h3>
               <p class="features-text">
                 Значимость этих проблем настолько очевидна, что реализация
@@ -124,6 +164,36 @@
               />
               <h3 class="team-member-heading">Игорь Демьяненко</h3>
               <span>Product Designer</span>
+              <div class="socials-block">
+                <a href="" class="socials-icons">
+                  <svg class="icon-instagram" width="20px" height="20px">
+                    <use
+                      href="./images/icons.svg/symbol-defs.svg#icon-instagram"
+                    ></use>
+                  </svg>
+                </a>
+                <a href="" class="socials-icons">
+                  <svg class="icon-twitter" width="20px" height="20px">
+                    <use
+                      href="./images/icons.svg/symbol-defs.svg#icon-twitter"
+                    ></use>
+                  </svg>
+                </a>
+                <a href="" class="socials-icons">
+                  <svg class="icon-facebook" width="20px" height="20px">
+                    <use
+                      href="./images/icons.svg/symbol-defs.svg#icon-facebook"
+                    ></use>
+                  </svg>
+                </a>
+                <a href="" class="socials-icons">
+                  <svg class="icon-linkedin" width="20px" height="20px">
+                    <use
+                      href="./images/icons.svg/symbol-defs.svg#icon-linkedin"
+                    ></use>
+                  </svg>
+                </a>
+              </div>
             </li>
             <li class="team-member">
               <img
@@ -134,6 +204,36 @@
               />
               <h3 class="team-member-heading">Ольга Репина</h3>
               <span>Frontend Developer</span>
+              <div class="socials-block">
+                <a href="" class="socials-icons">
+                  <svg class="icon-instagram" width="20px" height="20px">
+                    <use
+                      href="./images/icons.svg/symbol-defs.svg#icon-instagram"
+                    ></use>
+                  </svg>
+                </a>
+                <a href="" class="socials-icons">
+                  <svg class="icon-twitter" width="20px" height="20px">
+                    <use
+                      href="./images/icons.svg/symbol-defs.svg#icon-twitter"
+                    ></use>
+                  </svg>
+                </a>
+                <a href="" class="socials-icons">
+                  <svg class="icon-facebook" width="20px" height="20px">
+                    <use
+                      href="./images/icons.svg/symbol-defs.svg#icon-facebook"
+                    ></use>
+                  </svg>
+                </a>
+                <a href="" class="socials-icons">
+                  <svg class="icon-linkedin" width="20px" height="20px">
+                    <use
+                      href="./images/icons.svg/symbol-defs.svg#icon-linkedin"
+                    ></use>
+                  </svg>
+                </a>
+              </div>
             </li>
             <li class="team-member">
               <img
@@ -144,6 +244,36 @@
               />
               <h3 class="team-member-heading">Николай Тарасов</h3>
               <span>Marketing</span>
+              <div class="socials-block">
+                <a href="" class="socials-icons">
+                  <svg class="icon-instagram" width="20px" height="20px">
+                    <use
+                      href="./images/icons.svg/symbol-defs.svg#icon-instagram"
+                    ></use>
+                  </svg>
+                </a>
+                <a href="" class="socials-icons">
+                  <svg class="icon-twitter" width="20px" height="20px">
+                    <use
+                      href="./images/icons.svg/symbol-defs.svg#icon-twitter"
+                    ></use>
+                  </svg>
+                </a>
+                <a href="" class="socials-icons">
+                  <svg class="icon-facebook" width="20px" height="20px">
+                    <use
+                      href="./images/icons.svg/symbol-defs.svg#icon-facebook"
+                    ></use>
+                  </svg>
+                </a>
+                <a href="" class="socials-icons">
+                  <svg class="icon-linkedin" width="20px" height="20px">
+                    <use
+                      href="./images/icons.svg/symbol-defs.svg#icon-linkedin"
+                    ></use>
+                  </svg>
+                </a>
+              </div>
             </li>
             <li class="team-member">
               <img
@@ -154,6 +284,36 @@
               />
               <h3 class="team-member-heading">Михаил Ермаков</h3>
               <span>UI Designer</span>
+              <div class="socials-block">
+                <a href="" class="socials-icons">
+                  <svg class="icon-instagram" width="20px" height="20px">
+                    <use
+                      href="./images/icons.svg/symbol-defs.svg#icon-instagram"
+                    ></use>
+                  </svg>
+                </a>
+                <a href="" class="socials-icons">
+                  <svg class="icon-twitter" width="20px" height="20px">
+                    <use
+                      href="./images/icons.svg/symbol-defs.svg#icon-twitter"
+                    ></use>
+                  </svg>
+                </a>
+                <a href="" class="socials-icons">
+                  <svg class="icon-facebook" width="20px" height="20px">
+                    <use
+                      href="./images/icons.svg/symbol-defs.svg#icon-facebook"
+                    ></use>
+                  </svg>
+                </a>
+                <a href="" class="socials-icons">
+                  <svg class="icon-linkedin" width="20px" height="20px">
+                    <use
+                      href="./images/icons.svg/symbol-defs.svg#icon-linkedin"
+                    ></use>
+                  </svg>
+                </a>
+              </div>
             </li>
           </ul>
         </div>
@@ -161,56 +321,50 @@
       <section class="clients">
         <div class="container">
           <h2 class="section-title">Постоянные клиенты</h2>
-          <ul class="list clients-list">
-            <li class="clients-item">
-              <img
-                src="./images/icons.svg/Logo-1.svg"
-                alt="Логотип компании YA&CO"
-                class="client-logo"
-                width="106"
-              />
-            </li>
-            <li class="clients-item">
-              <img
-                src="./images/icons.svg/Logo-2.svg"
-                alt="Логотип компании"
-                class="client-logo"
-                width="106"
-              />
-            </li>
-            <li class="clients-item">
-              <img
-                src="./images/icons.svg/Logo-3.svg"
-                alt="Логотип компании"
-                class="client-logo"
-                width="106"
-              />
-            </li>
-            <li class="clients-item">
-              <img
-                src="./images/icons.svg/Logo-4.svg"
-                alt="Логотип компании"
-                class="client-logo"
-                width="106"
-              />
-            </li>
-            <li class="clients-item">
-              <img
-                src="./images/icons.svg/Logo-5.svg"
-                alt="Логотип компании"
-                class="client-logo"
-                width="106"
-              />
-            </li>
-            <li class="clients-item">
-              <img
-                src="./images/icons.svg/Logo-6.svg"
-                alt="Логотип компании"
-                class="client-logo"
-                width="106"
-              />
-            </li>
-          </ul>
+          <div class="clients-list">
+            <a href="" class="clients-item">
+              <svg class="clients-item-icon" width="106px" height="60px">
+                <use
+                  href="./images/icons.svg/symbol-defs.svg#icon-Logo-1"
+                ></use>
+              </svg>
+            </a>
+            <a href="" class="clients-item">
+              <svg class="clients-item-icon" width="106px" height="60px">
+                <use
+                  href="./images/icons.svg/symbol-defs.svg#icon-Logo-2"
+                ></use>
+              </svg>
+            </a>
+            <a href="" class="clients-item">
+              <svg class="clients-item-icon" width="106px" height="60px">
+                <use
+                  href="./images/icons.svg/symbol-defs.svg#icon-Logo-3"
+                ></use>
+              </svg>
+            </a>
+            <a href="" class="clients-item">
+              <svg class="clients-item-icon" width="106px" height="60px">
+                <use
+                  href="./images/icons.svg/symbol-defs.svg#icon-Logo-4"
+                ></use>
+              </svg>
+            </a>
+            <a href="" class="clients-item">
+              <svg class="clients-item-icon" width="106px" height="60px">
+                <use
+                  href="./images/icons.svg/symbol-defs.svg#icon-Logo-5"
+                ></use>
+              </svg>
+            </a>
+            <a href="" class="clients-item">
+              <svg class="clients-item-icon" width="106px" height="60px">
+                <use
+                  href="./images/icons.svg/symbol-defs.svg#icon-Logo-6"
+                ></use>
+              </svg>
+            </a>
+          </div>
         </div>
       </section>
     </main>
@@ -219,7 +373,12 @@
         <div class="address-block">
           <a href="index.html" class="footer logo"><span>Web</span>Studio</a>
           <address class="contacts">
-            <a href="https://goo.gl/maps/mb2MzYeSatuCZ7m78" class="footer-contact"> г. Киев, пр-т Леси Украинки, 26</a>
+            <a
+              href="https://goo.gl/maps/mb2MzYeSatuCZ7m78"
+              class="footer-contact"
+            >
+              г. Киев, пр-т Леси Украинки, 26</a
+            >
             <a href="mailto:info@example.com" class="footer-contact"
               >info@example.com</a
             ><br />
@@ -230,10 +389,35 @@
         </div>
         <div>
           <span class="socials-text">присоединяйтесь</span>
-            <a href="" class="socials-icon instagram"></a>
-            <a href="" class="socials-icon twitter"></a>
-            <a href="" class="socials-icon facebook"></a>
-            <a href="" class="socials-icon linkedin"></a>
+          <div class="footer-socials-group">
+            <a href="" class="footer-socials">
+              <svg class="icon-footer instagram" width="20px" height="20px">
+                <use
+                  href="./images/icons.svg/symbol-defs.svg#icon-footer-instagram"
+                ></use>
+              </svg>
+            </a>
+            <a href="" class="footer-socials">
+              <svg class="icon-footer twitter" width="20px" height="20px">
+                <use
+                  href="./images/icons.svg/symbol-defs.svg#icon-footer-twitter"
+                ></use>
+              </svg>
+            </a>
+            <a href="" class="footer-socials">
+              <svg class="icon-footer twitter" width="20px" height="20px">
+                <use
+                  href="./images/icons.svg/symbol-defs.svg#icon-footer-facebook"
+                ></use>
+              </svg>
+            </a>
+            <a href="" class="footer-socials">
+              <svg class="icon-footer twitter" width="20px" height="20px">
+                <use
+                  href="./images/icons.svg/symbol-defs.svg#icon-footer-linkedin"
+                ></use>
+              </svg>
+            </a>
           </div>
         </div>
       </div>
