--- a/portfolio.html
+++ b/portfolio.html
@@ -20,23 +20,35 @@
     <header class="page-heared">
       <div class="container main-nav">
         <nav class="main-nav-menu">
-          <a href="index.html" class="logo"><span>Web</span>Studio</a>
+          <a href="/" class="logo"><span>Web</span>Studio</a>
           <ul class="site-nav list">
-            <li class="item"><a href="./index.html" class="link">Студия</a></li>
+            <li class="item"><a href="/" class="link current">Студия</a></li>
             <li class="item">
-              <a href="./portfolio.html" class="link current">Портфолио</a>
+              <a href="./portfolio.html" class="link">Портфолио</a>
             </li>
             <li class="item"><a href="" class="link">Контакты</a></li>
           </ul>
         </nav>
         <ul class="info-nav list">
           <li class="item">
-            <a href="mailto:info@devstudio.com" class="link"
-              >info@devstudio.com</a
-            >
+            <a href="mailto:info@devstudio.com" class="link">
+              <svg class="icon-envelope" width="16px" height="12px">
+                <use
+                  href="./images/icons.svg/symbol-defs.svg#icon-envelope"
+                ></use>
+              </svg>
+              info@devstudio.com
+            </a>
           </li>
           <li class="item">
-            <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+            <a href="tel:+380961111111" class="link">
+              <svg class="icon-smartphone" width="10px" height="16px">
+                <use
+                  href="./images/icons.svg/symbol-defs.svg#icon-smartphone"
+                ></use>
+              </svg>
+              +38 096 111 11 11
+            </a>
           </li>
         </ul>
       </div>
@@ -187,7 +199,12 @@
         <div class="address-block">
           <a href="index.html" class="footer logo"><span>Web</span>Studio</a>
           <address class="contacts">
-            <p class="footer-address">г. Киев, пр-т Леси Украинки, 26</p>
+            <a
+              href="https://goo.gl/maps/mb2MzYeSatuCZ7m78"
+              class="footer-contact"
+            >
+              г. Киев, пр-т Леси Украинки, 26</a
+            >
             <a href="mailto:info@example.com" class="footer-contact"
               >info@example.com</a
             ><br />
@@ -198,10 +215,36 @@
         </div>
         <div>
           <span class="socials-text">присоединяйтесь</span>
-          <a href="" class="socials-icon instagram"></a>
-          <a href="" class="socials-icon twitter"></a>
-          <a href="" class="socials-icon facebook"></a>
-          <a href="" class="socials-icon linkedin"></a>
+          <div class="footer-socials-group">
+            <a href="" class="footer-socials">
+              <svg class="icon-footer instagram" width="20px" height="20px">
+                <use
+                  href="./images/icons.svg/symbol-defs.svg#icon-footer-instagram"
+                ></use>
+              </svg>
+            </a>
+            <a href="" class="footer-socials">
+              <svg class="icon-footer twitter" width="20px" height="20px">
+                <use
+                  href="./images/icons.svg/symbol-defs.svg#icon-footer-twitter"
+                ></use>
+              </svg>
+            </a>
+            <a href="" class="footer-socials">
+              <svg class="icon-footer twitter" width="20px" height="20px">
+                <use
+                  href="./images/icons.svg/symbol-defs.svg#icon-footer-facebook"
+                ></use>
+              </svg>
+            </a>
+            <a href="" class="footer-socials">
+              <svg class="icon-footer twitter" width="20px" height="20px">
+                <use
+                  href="./images/icons.svg/symbol-defs.svg#icon-footer-linkedin"
+                ></use>
+              </svg>
+            </a>
+          </div>
         </div>
       </div>
     </footer>
